GT-2869 - Key Bindings - refactor of methods to provide all actions